# digital-metrics

./: .gitignore  CLAUDE.md  README.md  README.ru.md  pyproject.toml
docs/: why_prf1_differs.md
fixtures/: eval_best_confidences.json  eval_confusion_matrix.csv  eval_metrics.csv
scripts/: compare_backends.py  compare_ultralytics.py  compare_ultralytics_prf1.py  eval.py  eval_identity.py  plot_prf1_vs_map.py  profile_backends.py  quickstart_from_weights.py  sanity_corrupt_labels.py
src/digital_metrics/: __init__.py  calibration.py  evaluation.py  grouping.py  types.py
src/digital_metrics/backends/: torchmetrics_metrics.py
src/digital_metrics/engines/: backend.py  native.py
src/digital_metrics/inference/: yolo_predict.py
src/digital_metrics/matching/: __init__.py  assignment.py  matching.py
src/digital_metrics/preprocess/: nms.py  preprocessor.py
src/digital_metrics/reporting/: __init__.py  dashboard.py
src/digital_metrics/scoring/: __init__.py  ap.py
src/digital_metrics/tracking/: __init__.py  clearml_tracker.py
src/metrics/: __init__.py  ap.py  ci.py  confidence.py  config.py  confusion.py  dashboard.py  evaluation.py  external.py  matching.py  nms.py  torchmetrics_metrics.py  types.py  ultralytics_metrics.py  validation.py  yolo_predict.py
src/metrics/backends/: __init__.py  external.py  torchmetrics_metrics.py  ultralytics_metrics.py
src/metrics/engines/: __init__.py  backend.py  base.py  native.py
src/metrics/inference/: __init__.py
src/metrics/matching/: iou.py  matching.py
src/metrics/preprocess/: __init__.py  nms.py
src/metrics/reporting/: dashboard.py
src/metrics/scoring/: ap.py  confidence.py  confusion.py  kappa.py
tests/: conftest.py  test_ap.py  test_ci.py  test_clearml_tracker.py  test_confidence.py  test_confidence_calibrator.py  test_config.py  test_dashboard.py  test_engines.py  test_evaluation.py  test_evaluation_backend.py  test_external_metrics.py  test_iou.py  test_matching.py  test_nms.py  test_preprocessor.py  test_torchmetrics_calibration.py  test_torchmetrics_metrics.py  test_ultralytics_metrics.py  test_yolo_predict.py
