[project]
name = "digital-metrics"
version = "0.1.0"
description = "Object detection evaluation library: precision, recall, mAP50/75/50-95, F1, Cohen's kappa, confidence intervals."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wasil Kas", email = "wasilkas54@gmail.com" }]
keywords = ["object-detection", "metrics", "mAP", "precision", "recall", "evaluation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    "loguru>=0.7",
    "matplotlib>=3.7",
    "plotly>=5.14",
    "tqdm>=4.65",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# External metric backends behind metrics.compute_detection_metrics. Both are
# heavy (pull in torch) so they are kept out of the core install.
# YOLO-comparable P/R/F1/AP via Ultralytics' own ap_per_class.
ultralytics = ["ultralytics>=8.3"]
# General COCO mAP via torchmetrics' MeanAveragePrecision (also needs
# torchvision + pycocotools, supplied by the [detection] extra).
torchmetrics = ["torchmetrics[detection]>=1.0"]

[project.urls]
Homepage = "https://github.com/Wasilkas/digital-metrics"
Repository = "https://github.com/Wasilkas/digital-metrics"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metrics"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "FBT"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["scipy.*", "sklearn.*", "tqdm.*", "ultralytics.*", "torch.*", "torchmetrics.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]
